# nec_core

./: .gitignore  CMakeLists.txt  Makefile  test_186.vcd
bench/: bcu.cpp  compare_cycles.py  extract_hw.py  extract_sim.py  main.cpp  test_186.cpp
docs/: alu.yml  large_mov_loop.dsl  large_mov_loop.gtkw  large_mov_loop.vcd  large_mov_loop_0wait.dsl  large_mov_loop_0wait.vcd  lock_jmp.dsl  nop_fetch.dsl  nop_fetch.vcd  nop_loop.dsl  nop_loop.vcd  odd_mov_loop_0wait.vcd  opcodes.yaml  predecode_loop.gtkw  predecode_loop.vcd  predecode_loop_mem.vcd  push_all_loop_0wait.vcd  small_mov_loop.dsl  small_mov_loop.gtkw  small_mov_loop.vcd  time_basic_ops.dsl  time_basic_ops.vcd  time_basic_ops_lock.dsl  time_basic_ops_lock.vcd  v33_basic.dsl  v33_cpu.dsc
hdl/: alu.sv  bus_control_unit.sv  bus_control_unit_v35.sv  decode.sv  divider.sv  divu_int.sv  enums.svh  enums.yaml  gen_decode.py  gen_enums.py  nec_decode.sv  nec_divider.sv  opcode_enums.yaml  opcodes.svh  opcodes.yaml  pre_decode.sv  types.sv  v33.qip  v33.sv  v35.qip  v35.sv
hdl/filters/: alu_operation_e.txt  bcu_t_state_e.txt  cpu_state_e.txt  decode_stage_e.txt  decode_state_e.txt  enum.stp  opcode_e.txt  operand_e.txt  width_e.txt
src/: main.cpp  test_186.cpp
testrom/: .gitignore  Makefile
testrom/linker/: airass.ld
testrom/src/: combined.asm  comms.c  comms.h  entry.S  init.c  interrupts.h  interrupts_default.c  main.c  split_rom.py  tests.asm  timing.asm  util.h
tests/80186/: div.asm  interrupt.asm  run_tests.sh
traces/: cycle_names.txt
traces/m107/: add_2byte_from_mem.txt  add_2byte_from_mem.vcd  (+63 more)
(+89 files in other folders)
